# ai-engineering-bootcamp-oct25

./: .gitignore  Dockerfile.fastapi  Dockerfile.streamlit  README.md  docker-compose.yml  eval_retriever.py  pyproject.toml
notebooks/: test.ipynb
notebooks/week_1/: 01-EDA-amazon.ipynb  01-llm-apis.ipynb  02-explore-amazon-dataset.ipynb
notebooks/week_2/: 01-RAG-preprocessing-Amazon.ipynb  02-RAG-pipeline.ipynb  03-evaluation-dataset.ipynb  04-RAG-Evals.ipynb
notebooks/week_3/: 01-Structured-Outputs-Intro.ipynb  02-Structured-Outputs-RAG-pipeline.ipynb  04-Reranking.ipynb  05-Prompt-Versioning.ipynb
notebooks/week_3/prompts/: retrieval_generation.yaml
src/api/: app.py
src/api/api/: endpoints.py  middleware.py  models.py
src/api/core/: config.py
src/api/rag/: retrieval_generation.py
src/api/rag/prompts/: retrieval_generation.yaml
src/chatbot_ui/: app.py
