[project]
name = "ai-engineering-bootcamp-oct25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "google-genai>=1.41.0",
    "groq>=0.32.0",
    "instructor>=1.13.0",
    "ipykernel>=6.30.1",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.1",
    "langsmith>=0.4.37",
    "openai>=2.1.0",
    "pandas==2.2.3",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.15.1",
    "ragas>=0.3.1",
    "snowflake-connector-python>=3.17.4",
    "streamlit>=1.50.0",
    "uvicorn>=0.37.0",
]
